--- a/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/collection-modal.component.html
@@ -278,6 +278,11 @@
               <div class="col-md-8" style="text-align: right;">
                 <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">Close</button>
 
+                <button *ngIf="tabName === 'artifacts'" type="button" class="btn btn-secondary" title="Create product group"
+                  [disabled]="processRunning" (click)="handleCreateProductGroup()" style="margin-left: 5px;">
+                  Create product group
+                </button>
+
                 <button *ngIf="processable" type="button" class="btn btn-secondary" title="Downloads all files"
                   [disabled]="processRunning" (click)="handleDownload()" style="margin-left: 5px;">
                   Download All
